수정한 마이페이지+분석페이지~~~~~